www/blocks/page/_surveys.scss
#surveys {

  > header {
    @include -clearfix;
    padding: $app-main-footer-padding;
    overflow: hidden;
    background-color: $component-header-background-color;
  }

  #infobutton-region {
    float: right;
  }

  .survey [role="link"] {
    // padding: 1.5rem 0 1.5rem 1.5rem;
    position: relative;
    .reminder {
      background-color: #fff;
      position: absolute;
      font-weight: bold;
      color: #777;
      top: 0;
      right: 0;
      margin-top: 1.5rem;
      padding-top: 0.2rem;
      font-size: 0.8rem;
      &::before {
        float: left;
        margin-right: 0.5rem;
        width: 1rem;
        height: 1rem;
        background-color: red;
        content: ' ';
        display: inline-block;
        background-image: url("../img/icon/clock.png");
        background-size: 1rem;
      }
    }
  }

}

